# lab5-cg

./: .gitignore  CMakeLists.txt  collected_files.txt  xmake.lua
shaders/: gbuffer.frag  gbuffer.vert  lighting.frag  lighting.vert  phong.frag  phong.vert  shadows.vert
src/: Camera.h  Engine.cpp  Engine.h  GBuffer.cpp  GBuffer.h  Input.cpp  Input.h  Light.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  RenderingSystem.cpp  RenderingSystem.h  Timer.h  Types.h  Window.cpp  Window.h  main.cpp
